--- a/FlurryBrowser/FlurryBrowser/en.lproj/MainStoryboard.storyboard
+++ b/FlurryBrowser/FlurryBrowser/en.lproj/MainStoryboard.storyboard
@@ -51,11 +51,11 @@
                     <navigationItem key="navigationItem" id="pAs-Ng-sOU">
                         <nil key="title"/>
                         <barButtonItem key="leftBarButtonItem" id="cwo-mP-NPF">
-                            <textField key="customView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" clearButtonMode="whileEditing" id="475-HZ-DYC">
+                            <textField key="customView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" clearButtonMode="whileEditing" id="475-HZ-DYC" userLabel="Address Field">
                                 <rect key="frame" x="5" y="6" width="310" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="URL" returnKeyType="go" enablesReturnKeyAutomatically="YES"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="URL" returnKeyType="go" enablesReturnKeyAutomatically="YES"/>
                                 <connections>
                                     <outlet property="delegate" destination="2" id="D5n-pr-pF1"/>
                                 </connections>
